// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardLayout collapsed snapshot 1`] = `
<Container
  fluid={true}
  size="xl"
>
  <Row>
    <Col
      className="course-list-column"
      lg={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        Object {
          "offset": 0,
          "span": 8,
        }
      }
    >
      test-children
    </Col>
    <Col
      className="sidebar-column"
      lg={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        Object {
          "offset": 0,
          "span": 4,
        }
      }
    >
      test-sidebar-content
    </Col>
  </Row>
  <Row>
    <Col>
      <WidgetFooter />
    </Col>
  </Row>
</Container>
`;

exports[`DashboardLayout not collapsed snapshot 1`] = `
<Container
  fluid={true}
  size="xl"
>
  <Row>
    <Col
      className="course-list-column"
      lg={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        Object {
          "offset": 0,
          "span": 8,
        }
      }
    >
      test-children
    </Col>
    <Col
      className="sidebar-column"
      lg={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        Object {
          "offset": 0,
          "span": 4,
        }
      }
    >
      <h2
        className="course-list-title"
      >
         
      </h2>
      test-sidebar-content
    </Col>
  </Row>
  <Row>
    <Col>
      <WidgetFooter />
    </Col>
  </Row>
</Container>
`;
